# llm-annotation-platform

./: .env.example  .gitignore  LICENSE  README.md  REFACTORING.md  VISION.md  auth.py  database.py  main.py  pyproject.toml  reporting.py  requirements-dev.txt  requirements.txt  schemas.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
app/routers/: annotations.py  auth.py  reports.py
app/static/ui/: app.css  app.js  index.html
routers/: annotations.py
tests/: conftest.py  test_annotations.py  test_auth.py  test_ui.py
