[project]
name = "llm-annotation-platform"
version = "1.0.0"
description = "A FastAPI service for reviewing, scoring, and labeling LLM outputs (model eval, hallucination review, RLHF data ops)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Segun Ashaolu" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
